# code-knowledge-graph

./: .gitignore  README.md  mcp.user.json  package-lock.json  package.json  pyproject.toml
code_kg/: __init__.py  cli.py  db.py  enrich.py  extract.py  federate.py  jpa.py  remote.py  server.py  spring.py
docs/: code-kg-overview.docx  code-kg-overview.pptx
instructions/: knowledge-graph-usage.instructions.md
scripts/: gen-docs.mjs
src/: build.js  cli.js  db.js  enrich.js  extractJava.js  federate.js  jpa.js  parsers.js  quiet.js  reactExtract.js  remote.js  server.js  spring.js
test/: graph.test.js
tests/: test_federation.py  test_graph.py  test_jpa.py
tests/fixtures/demo/src/main/java/com/example/demo/controller/: GreetingController.java  OrderController.java
tests/fixtures/demo/src/main/java/com/example/demo/dao/: GreetingDao.java
tests/fixtures/demo/src/main/java/com/example/demo/model/: Order.java
tests/fixtures/demo/src/main/java/com/example/demo/repository/: InMemoryOrderRepository.java
tests/fixtures/demo/src/main/java/com/example/demo/service/: DiscountService.java  GreetingService.java  OrderService.java
tests/fixtures/demo/src/main/java/com/example/demo/util/: StringUtils.java
tests/fixtures/ms/next-app/app/: page.tsx
tests/fixtures/ms/next-app/app/api/orders/: route.ts
tests/fixtures/ms/next-app/pages/api/: users.ts
tests/fixtures/ms/web-ui/src/: App.jsx  AuthContext.jsx  RegisterForm.jsx  Routes.jsx
tests/fixtures/shop/src/main/java/com/example/shop/domain/: Address.java  Customer.java  Purchase.java
(+7 files in other folders)
