[project]
name = "code-kg"
version = "0.1.0"
description = "Code knowledge-graph tool for agents: deterministic tree-sitter + Spring extraction into SQLite, served over MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter==0.25.2",
    "tree-sitter-java==0.23.5",
    "mcp[cli]",
    "anthropic",
]

[project.scripts]
code-kg = "code_kg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_kg"]
